tests/Rules/Structure/Fixtures/valid/lang_valid_fr_ca.html.twig
<!DOCTYPE html>
<html lang="fr-CA">
<head><title>Test</title></head>
<body><main><p>Bonjour</p></main></body>
</html>
