tests/Rules/Structure/Fixtures/invalid/lang_invalid_value.html.twig
{# 1 errors #}
<!DOCTYPE html>
<html lang="xx">
<head><title>Test</title></head>
<body><main><p>Hello</p></main></body>
</html>
